--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 
 <HTML>
 <HEAD>
-<TITLE>ADV-IT</TITLE>
+<TITLE>Angela Shkaf</TITLE>
 <SCRIPT LANGUAGE="JavaScript">
       var sizes = new Array(0,1,2,4,8,10,12);
       sizes.pos = 0;
@@ -19,9 +19,8 @@ setTimeout('Elastic()',100)
 </SCRIPT>
 <BODY  bgcolor=silver  onLoad=Elastic()>
 <CENTER>
-<font color="white"><h2>Hello from <font color="yellow">Zircon!</font><br>
-Welcome to Python Flask Web Page!
-<font color="red"><H1 ID="elastic" ALIGN="Center">GitHub Actions</H1>
+<font color="white"><h2>Hello from <font color="yellow">Angela cumpara Shkaf mare</font><br>
+<font color="red"><H1 ID="elastic" ALIGN="Center">Sunati acum la nr Angela</H1>
 <br>
 
 </body>
